- Imprving thread opbjects;
Signed-off-by: rvcoutinho <me@rvcoutinho.com>